--- a/about.html
+++ b/about.html
@@ -86,7 +86,7 @@
         <div class="column">
             <div class="icon-title">
                 <img src="images/about-img3.png" alt="Mission Icon" class="icon">
-                <h3>Our Mission at Nurse Mate</h3>
+                <h3>Our Mission at XP CURE</h3>
             </div>
             <p>
                 Our mission is to deliver professional, compassionate, and reliable nursing care, ensuring that exceptional support is always within reach. We aim to bridge the gap between patients and qualified caregivers, making health and wellness services easily accessible from the comfort of home. Whether it's nurturing a child, aiding in post-surgery recovery, or providing essential elderly care, we are dedicated to offering personalized solutions to individual needs.
@@ -232,7 +232,7 @@
             <h3>Get In Touch</h3>
             <p><span>📞</span> <a href="callto:7892210068"> 789221-0068</a></p>
             <p><span>📍</span> Bangalore, Karnataka, India</p>
-            <p><span>📧</span> <a href="mailto:support@nursemate.in">support@nursemate.in</a></p>
+            <p><span>📧</span> <a href="mailto:support@nursemate.in">support@xpcure.com</a></p>
           </div>
       
           <!-- Social Media Section -->
