--- a/privacy.html
+++ b/privacy.html
@@ -171,7 +171,7 @@ the service delivery, such as nurses and patients, and only to the extent necess
         <h3>Get In Touch</h3>
         <p><span>📞</span> <a href="callto:7892210068"> 789221-0068</a></p>
         <p><span>📍</span> Bangalore, Karnataka, India</p>
-        <p><span>📧</span> <a href="mailto:support@nursemate.in">support@nursemate.in</a></p>
+        <p><span>📧</span> <a href="mailto:support@nursemate.in">support@xpcure.com</a></p>
       </div>
   
       <!-- Social Media Section -->
