--- a/surgery.html
+++ b/surgery.html
@@ -148,7 +148,7 @@ promoting a smooth and safe recovery.
       <h3>Get In Touch</h3>
       <p><span>📞</span> <a href="callto:7892210068"> 789221-0068</a></p>
       <p><span>📍</span> Bangalore, Karnataka, India</p>
-      <p><span>📧</span> <a href="mailto:support@nursemate.in">support@nursemate.in</a></p>
+      <p><span>📧</span> <a href="mailto:support@nursemate.in">support@xpcure.com</a></p>
     </div>
 
     <!-- Social Media Section -->
