--- a/index.html
+++ b/index.html
@@ -254,11 +254,14 @@
                       </div>
                   </div>
                   <div id="w-node-_65572594-4166-fd45-c42e-e16b62afacb8-b65c71d8" class="vertical-left-flex mob-centre-flex">
-                      <h2 class="h2 padding-bottom-16">Health Benefits simplified</h2>
+                      <h2 class="h2 padding-bottom-16">Simplifying Health Benefits for All.</h2>
                       <p class="text-b4 heading-para health-benefits">
-                          Our healthcare services are three-fold. We ensure <strong>proactive, corrective</strong>
-                          , and <strong>reactive healthcare </strong>
-                          through insurance and wellness solutions
+                          We simplify health benefits by offering personalized 
+solutions tailored to your needs. With clear cost insights 
+and seamless support, we help you make informed decisions 
+and access the right care effortlessly. Take control of your 
+health with confidence and ease.
+
                       </p>
                       <div class="btn-container spacing-16">
                           <a id="home-explore-insurance" href="/insurance-overview" class="button blue-btn w-button">Explore Insurance -&gt;</a>
