--- a/pediatrics.html
+++ b/pediatrics.html
@@ -68,7 +68,7 @@
 <section class="care-service">
     <!-- Text Content Section -->
     <div class="content">
-        <h2>Elderly Care Service</h2>
+        <h2>Pediatric Service</h2>
         <div class="underline"></div>
         <p>
             XPCure’s pediatric services are designed to provide comprehensive care for
