--- a/surgery.html
+++ b/surgery.html
@@ -69,7 +69,7 @@
 <section class="care-service">
     <!-- Text Content Section -->
     <div class="content">
-        <h2>Elderly Care Service</h2>
+        <h2>Post Surgery Service</h2>
         <div class="underline"></div>
         <p>
             XPCure's post-surgery services are designed to support individuals during 
